# MEGN540_Lectures

./: .gitignore  CMakeLists.txt  LICENSE
include/: bit_operations.h
src/: bit_operations.c  example.c  main.c  pi_as_hex.c  print_float.c
